--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "2.0.39",
     "clean-webpack-plugin": "0.1.14",
     "css-loader": "0.26.0",
+    "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.24.1",
     "less": "2.7.1",
     "less-loader": "2.2.3",
