--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "0.14.50",
     "@types/react-dom": "0.14.19",
     "@types/react-router": "2.0.39",
+    "@types/whatwg-fetch": "0.0.32",
     "clean-webpack-plugin": "0.1.14",
+    "copy-webpack-plugin": "4.0.1",
     "css-loader": "0.26.0",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.24.1",
@@ -30,6 +32,7 @@
   "dependencies": {
     "react": "15.4.1",
     "react-dom": "15.4.1",
-    "react-router": "3.0.0"
+    "react-router": "3.0.0",
+    "rxjs": "5.0.0-rc.4"
   }
 }
